added more examples

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Small exempla of socket implementation for UDP & TCP connection. 
+Small examples of socket implementation for UDP & TCP connection. 
